--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -4,6 +4,24 @@ h1 {
 }
 
 .btn-primary {
+    display: block;
+    text-align: center;
     color: white;
     background: cornflowerblue;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+div, a, p {
+    text-align: center;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    height: 450px;
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
